--- a/em-rem/index.html
+++ b/em-rem/index.html
@@ -12,18 +12,22 @@
 <body>
   <div class="container">
     <h1>Main title</h1>
+    <h2>Test title</h2>
 
     <article class="art">
       <img class="artImg" src="https://picsum.photos/id/0/800/600" alt="laptop on table">
       <h2 class="articleTitle">Post 1</h2>
-      <p class="articleText">Lorem ipsum dolor sit amet consectetur.</p>
+      <p class="articleText">Rem priklauso nuo html elemento font size</p>
       <button class="articleBtn">Read more</button>
+      <button class="articleBtn btnEm">Go back</button>
     </article>
-    <article class="art">
+
+    <article class="art notEm">
       <img class="artImg" src="https://picsum.photos/id/17/900/500" alt="nature path">
       <h2 class="articleTitle">Post 1</h2>
       <p class="articleText">Lorem ipsum dolor sit amet consectetur.</p>
       <button class="articleBtn">Read more</button>
+      <button class="articleBtn btnEm">Go back</button>
     </article>
   </div>
 
