--- a/our-team/index.html
+++ b/our-team/index.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Our team</title>
+  <link rel="stylesheet" href="reset.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -14,19 +16,23 @@
       <h2 class="sectionTitle">Our team</h2>
       <p class="sectionIntro">Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur est quia maxime
         quaerat. Molestiae, asperiores.</p>
-    </div>
-    <div class="cardContainer">
-      <!-- one card -->
-      <div class="card">
-        <img class="cardImg" src="" alt="Mike">
-        <div class="cardInfo">
-          <h3 class="cardTitle">James Bond</h3>
-          <p class="carJob">007</p>
-        </div>
-      </div>
-      <!-- /one card -->
 
+      <div class="cardContainer">
+        <!-- one card -->
+        <div class="card">
+          <div class="carImgContainer">
+            <div class="sidebar"></div>
+            <img class="cardImg" src="https://picsum.photos/id/22/600/400" alt="James Bond">
+          </div>
+          <div class="cardInfo">
+            <h3 class="cardTitle">James Bond</h3>
+            <p class="cardJob">Movie 007</p>
+          </div>
+        </div>
+        <!-- /one card -->
+      </div>
     </div>
+    <!-- /container -->
   </section>
 
 </body>
