--- a/our-team/index.html
+++ b/our-team/index.html
@@ -11,6 +11,10 @@
 
 <body>
 
+  <div class="box"></div>
+  <span class="kazka"></span>
+
+
   <section class="ourTeamSection">
     <div class="container">
       <h2 class="sectionTitle">Our team</h2>
@@ -33,6 +37,30 @@
       </div>
     </div>
     <!-- /container -->
+  </section>
+
+  <section class="contact">
+    <div class="form container">
+      <h2 class="formTitle">COntact</h2>
+      <form class="formEl">
+        <div class="inputBlock">
+          <label for="name">Name</label>
+          <input class="textInput" type="text" name="name" id="name">
+        </div>
+        <div class="inputBlock">
+          <label for="lastName">Last Name</label>
+          <input class="textInput" type="text" name="lastName" id="lastName">
+        </div>
+        <div class="inputBlock twoCol">
+          <label for="email">Email</label>
+          <input class="textInput" type="email" name="email" id="email">
+        </div>
+        <div class="inputBlock twoCol">
+          <label for="email">Password</label>
+          <input class="textInput" type="email" name="email" id="email">
+        </div>
+      </form>
+    </div>
   </section>
 
 </body>
